test/should-pass/pass/nested-klass-defn/exe-main.dk
klass outer {
  slots int-t;
}
klass outer::nested {
  slots outer::slots-t*;
}
int main() {
  object-t k1 = dk-klass-for-name(#outer);
  $dump(k1);
  object-t k2 = dk-klass-for-name(#outer::nested);
  $dump(k2);
  object-t o1 = make(outer::klass);
  $dump(o1);
  object-t o2 = make(outer::nested::klass);
  $dump(o2);
  return 0;
}
